--- a/html/latihan_TataKalimat.html
+++ b/html/latihan_TataKalimat.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latihan Tata Kalimat</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Stylesheet global -->
-  <link rel="stylesheet" href="latihan.css"> <!-- Stylesheet spesifik -->
+  <link rel="stylesheet" href="../css/styles.css"> <!-- Stylesheet global -->
+  <link rel="stylesheet" href="../css/latihan.css"> <!-- Stylesheet spesifik -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -65,7 +65,7 @@
     </main>
     </div>
 
-  <script src="latihan3.js"></script>
+  <script src="../js/latihan3.js"></script>
 
 </body>
 </html>
