--- a/html/signup.html
+++ b/html/signup.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="login.css">
+    <title>Signup Page</title>
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <div class="container">
         <h1 class="logo">BahasaLoka</h1>
         <div class="form-container">
-            <h2>Login</h2>
-            <form id="loginForm" action="#" method="post">
+            <h2>Sign up</h2>
+            <form id=signupForm action="#" method="post">
+                <div class="form-group">
+                    <label for="name">Nama Lengkap:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
@@ -36,19 +40,20 @@
                         }
                     })
 
-                    const loginForm = document.getElementById("loginForm");
-                    loginForm.addEventListener("submit", function(event) {
+                    const signupForm = document.getElementById("signupForm");
+                    signupForm.addEventListener("submit", function(event) {
                         event.preventDefault(); // Mencegah form dikirim ke server
 
                         // Kamu bisa tambahkan validasi tambahan di sini jika diperlukan
 
                         // Redirect ke halaman index.html
                         window.location.href = "index.html";
-                    });
+                    })
+
                 </script>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn">Sign up</button>
             </form>
-            <p>Belum punya akun? <a href="signup.html">Daftar di sini</a></p>
+            <p>Sudah punya akun? <a href="login.html">Login di sini</a></p>
         </div>
     </div>
 </body>
