--- a/html/ejaanMateri.html
+++ b/html/ejaanMateri.html
@@ -20,7 +20,7 @@
             <header class="header">
                 <h1>BahasaLoka</h1>
             </header>
-
+            <br><br>
             <!-- Kotak Pengantar Ejaan -->
             <div class="materi-box">
                 <div class="toggle-header">
@@ -79,9 +79,13 @@
                 </div>
             </div>
             <div class="button-container">
+                <a href="homepage.html" class="btn-latihan">Pilihan Materi</a>
                 <a href="latihan_Ejaan.html" class="btn-latihan">Lanjut ke Latihan</a>
             </div>
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 
     <script src="../js/script.js"></script> <!-- JavaScript untuk fungsionalitas -->
