--- a/html/homepage.html
+++ b/html/homepage.html
@@ -44,6 +44,9 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 </body>
 </html>
