--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,9 @@
             <a href="homepage.html" class="buttonX">Mulai</a>
             </section>
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 </body>
 </html>
