--- a/html/latihan_TataKalimat.html
+++ b/html/latihan_TataKalimat.html
@@ -16,8 +16,9 @@
   <div class="container">
     <main class="main-content">
         <header class="header">
-            <h1>Latihan Tata Kalimat</h1>
+            <h1>BahasaLoka</h1>
         </header>
+        <br><br>
     
     <div id="quiz-container">
             <div class="question-container" id="question-1">
@@ -63,6 +64,9 @@
     <div id="result"></div>
     <button id="back-to-material" style="display: none;" onclick="goBackToMaterial()">Kembali ke Materi</button>
     </main>
+    <footer class="footer">
+        <p>18222054 - Natanael S S</p>
+    </footer>
     </div>
 
   <script src="../js/latihan3.js"></script>
