--- a/html/latihan_TataKata.html
+++ b/html/latihan_TataKata.html
@@ -19,8 +19,8 @@
         <!-- Main Content -->
         <main class="main-content">
             <header class="header">
-                <h1>Latihan Ejaan Bahasa Indonesia</h1>
-            </header>
+                <h1>BahasaLoka</h1>
+            </header> <br><br>
 
 
         <div id="quiz-container">
@@ -84,6 +84,9 @@
             <div id="result"></div>
             <button id="back-to-material" style="display: none;" onclick="goBackToMaterial()">Kembali ke Materi</button>
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 
     <script src="../js/latihan2.js"></script>
