--- a/html/tatakalimatMateri.html
+++ b/html/tatakalimatMateri.html
@@ -19,78 +19,56 @@
         <!-- Main Content -->
         <main class="main-content">
             <header class="header">
-                <h1>Materi Tata Kata</h1>
+                <h1>BahasaLoka</h1>
             </header>
+            <br><br>
 
             <!-- Kotak Pengantar Ejaan -->
             <div class="materi-box">
                 <div class="toggle-header">
-                    <h3>Pengantar Tata Kata</h3>
+                    <h3>Pengantar Tata Kalimat</h3>
                     <button class="toggle-btn">(V)</button>
                 </div>
                 <div class="toggle-content">
-                    <p>Pembentukan kata dapat dilakukan dengan berbagai cara. Cara tersebut antara lain 
-                        dengan pengimbuhan, pemajemukan dan pembubuhan, pengulangan, 
-                        pengulangan disertai imbuhan, dan pengulangan kata majemuk. </p>
+                    <p>Tata kalimat adalah aturan atau kaidah yang mengatur bagaimana kata-kata disusun untuk membentuk kalimat yang benar dan bermakna dalam suatu bahasa. Dalam tata kalimat, kita mempelajari struktur kalimat, elemen-elemennya, dan cara mengatur kata-kata agar kalimat tersebut memiliki arti yang jelas dan sesuai dengan aturan kebahasaan. </p>
                 </div>
             </div>
 
             <!-- Kotak Contoh Penggunaan Huruf Kapital -->
             <div class="materi-box">
                 <div class="toggle-header">
-                    <h3>Pembentukan Kata dengan Awalan</h3>
+                    <h3>Pembentukan Kalimat dengan Tepat</h3>
                     <button class="toggle-btn">(V)</button>
                 </div>
                 <div class="toggle-content">
-                    <p>Ada berbagai macam awalan/prefiks dalam bahasa Indonesia, yaitu: <strong>ber-</strong>, <strong>per-</strong>, <strong>meng-</strong>, <strong>di-</strong>, <strong>ter-</strong>, <strong>ke-</strong>, dll.</p>
-                    <p>Contoh pembentukan kata dengan awalan yang tepat :</p>
-                    <ul>
-                        <li>(a) Prefiks me- atau pe- jika ditambahkan pada kata dasar yang dimulai dengan konsonan k/t/s/p.</li>
-                        <li>Contoh :</li>
-                        <li>me- / pe- + karang menjadi mengarang / pengarang </li>
-                        <li>me- / pe- + putar menjadi memutar / pemutar</li>
-                        <li>me- / pe- + tertib menjadi menertibkan / penertib </li>
-                        <li>me- / pe- + seleksi menjadi menyeleksi / penyeleksi </li>
-                        <br>
-                        <li>(b) Prefiks ber-, ter- berubah menjadi be-, te-, 
-                            dan pe- bila diikuti oleh kata dasar yang diawali oleh konsonan / r / atau suku pertama 
-                            berakhir dengan / er /. Kecuali ter- yang menyatakan paling tetap ter- misalnya 
-                            terbersih dan terpercaya. Prefiks ber- atau per- dapat juga berubah menjadi bel- atau 
-                            pel- seperti pada belajar dan pelajar. </li>
-                        <li>Contoh :</li>
-                        <li><strong>ber-</strong> + ajar menjadi belajar</li>
-                        <li><strong>ter-</strong> + cermin menjadi tecermin</li>
-                        <li><strong>per- + besar</strong> menjadi perbesar</li>
-                    </ul>
+                    <p>Pembentukan kalimat yang tepat dimulai dengan menyusun unsur-unsur kalimat secara sistematis, mengikuti aturan tata bahasa. Sebuah kalimat harus memiliki subjek dan predikat sebagai elemen utama. Subjek berfungsi sebagai pelaku atau yang dibicarakan, sedangkan predikat menggambarkan tindakan atau keadaan yang dialami subjek. Objek dapat ditambahkan jika predikatnya merupakan kata kerja transitif, yakni kata kerja yang memerlukan objek untuk melengkapi makna. Selain itu, keterangan digunakan untuk memberikan informasi tambahan seperti waktu, tempat, atau cara.</p>
                 </div>
             </div>
 
             <!-- Kotak Contoh Penggunaan Huruf Miring -->
             <div class="materi-box">
                 <div class="toggle-header">
-                    <h3>Pembentukan Kata dengan Awalan & Akhiran</h3>
+                    <h3>Contoh Penerapan</h3>
                     <button class="toggle-btn">(V)</button>
                 </div>
                 <div class="toggle-content">
-                    <p>Awalan <strong>me- </strong>dan <strong>di-</strong> bergabung dengan sufiks <strong>-kan</strong> dan <strong>-i</strong>, 
-                       sedangkan awalan <strong>pe-</strong> dan <strong>ke- </strong>berkombinasi dengan sufiks <strong>-an</strong> untuk
-                       membentuk kata. Contohnya adalah sebagai berikut :</p>
-                    <ul>
-                        <li>menaikkan / menaiki -- dinaikkan / dinaiki</li>
-                        <li>memercayakan / memercayai -- dipercayai / dipercayakan</li>
-                        <li>penaikan -- kenaikan</li>
-                        <li>pendudukan -- kedudukan</li>
-                    </ul>
+                    <p>Contoh penerapan pembentukan kalimat yang tepat dapat dilihat pada kalimat, "Ani sedang belajar matematika di perpustakaan sore ini." Dalam kalimat ini, subjek Ani berada di awal kalimat, menunjukkan siapa yang melakukan tindakan. Predikat sedang belajar menjelaskan aktivitas yang dilakukan oleh subjek. Objek matematika melengkapi informasi tentang apa yang sedang dipelajari oleh Ani, dan keterangan di perpustakaan sore ini memberikan informasi tambahan mengenai lokasi dan waktu kegiatan tersebut terjadi. Dengan mengikuti urutan yang benar, kalimat ini menjadi mudah dipahami dan tersusun secara koheren,</p>
                 </div>
             </div>
 
 
             <div class="button-container">
+                <a href="homepage.html" class="btn-latihan">Pilihan Materi</a>
                 <a href="latihan_TataKalimat.html" class="btn-latihan">Lanjut ke Latihan</a>
             </div>
+
+
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 
-    <script src="script.js"></script> <!-- JavaScript untuk fungsionalitas -->
+    <script src="../js/script.js"></script> <!-- JavaScript untuk fungsionalitas -->
 </body>
 </html>
