--- a/html/tatakataMateri.html
+++ b/html/tatakataMateri.html
@@ -19,8 +19,9 @@
         <!-- Main Content -->
         <main class="main-content">
             <header class="header">
-                <h1>Materi Tata Kata</h1>
+                <h1>BahasaLoka</h1>
             </header>
+            <br><br>
 
             <!-- Kotak Pengantar Ejaan -->
             <div class="materi-box">
@@ -86,11 +87,15 @@
 
 
             <div class="button-container">
+                <a href="homepage.html" class="btn-latihan">Pilihan Materi</a>
                 <a href="latihan_TataKata.html" class="btn-latihan">Lanjut ke Latihan</a>
             </div>
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 
-    <script src="script.js"></script> <!-- JavaScript untuk fungsionalitas -->
+    <script src="../js/script.js"></script> <!-- JavaScript untuk fungsionalitas -->
 </body>
 </html>
