--- a/html/latihan_Ejaan.html
+++ b/html/latihan_Ejaan.html
@@ -17,8 +17,9 @@
         <!-- Main Content -->
         <main class="main-content">
             <header class="header">
-                <h1>Latihan Ejaan Bahasa Indonesia</h1>
+                <h1>BahasaLoka</h1>
             </header>
+            <br><br>
 
         <div id="quiz-container">
             <!-- Area Latihan Drag and Drop -->
@@ -85,6 +86,9 @@
             <div id="result"></div>
             <button id="back-to-material" style="display: none;" onclick="goBackToMaterial()">Kembali ke Materi</button>
         </main>
+        <footer class="footer">
+            <p>18222054 - Natanael S S</p>
+        </footer>
     </div>
 
     <script src="../js/latihan1.js"></script>
