--- a/html/latihan_Ejaan.html
+++ b/html/latihan_Ejaan.html
@@ -19,16 +19,16 @@
             <header class="header">
                 <h1>BahasaLoka</h1>
             </header>
-            <br><br>
+            <br>
 
         <div id="quiz-container">
             <!-- Area Latihan Drag and Drop -->
             <div class="question-container" id="question-1">
                 <p>1. "Saya akan pergi ke jakarta pada malam hari ini." </p>
                 <p>Pilihlah kata dari kalimat tersebut yang seharusnya diberi huruf kapital selain kata pertama.</p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-1"></div> <br><br>
+                 <div class="drop-area" id="drop-area-1"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">pergi</div>
                     <div class="option" draggable="true">malam</div>
@@ -40,9 +40,9 @@
             <div class="question-container" id="question-2" style="display: none;">
                 <p>2. "Budi sedang membaca komik yang dipinjamnya dari anto." </p>
                 <p>Pilihlah kata dari kalimat tersebut yang seharusnya diberi huruf kapital selain kata pertama.</p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-2"></div> <br><br>
+                 <div class="drop-area" id="drop-area-2"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">membaca</div>
                     <div class="option" draggable="true">anto</div>
@@ -54,9 +54,9 @@
             <div class="question-container" id="question-3" style="display: none;">
                 <p>3. "Berita tentang korupsi pembangunan sekolah itu muncul di surat kabar Cakrawala." </p>
                 <p>Pilihlah kata dari kalimat tersebut yang seharusnya dimiringkan</p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-3"></div> <br><br>
+                 <div class="drop-area" id="drop-area-3"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">berita</div>
                     <div class="option" draggable="true">Cakrawala</div>
@@ -68,9 +68,9 @@
             <div class="question-container" id="question-4" style="display: none;">
                 <p>4. "Nama ilmiah buah manggis ialah garcinia mangostana." </p>
                 <p>Pilihlah kata dari kalimat tersebut yang seharusnya dimiringkan</p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-4"></div> <br><br>
+                 <div class="drop-area" id="drop-area-4"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">garcinia mangostana</div>
                     <div class="option" draggable="true">mangis</div>
@@ -85,6 +85,7 @@
             </div>
             <div id="result"></div>
             <button id="back-to-material" style="display: none;" onclick="goBackToMaterial()">Kembali ke Materi</button>
+        <br>
         </main>
             <footer class="footer">
             <p>18222054 - Natanael S S</p>
