--- a/html/latihan_TataKata.html
+++ b/html/latihan_TataKata.html
@@ -20,16 +20,16 @@
         <main class="main-content">
             <header class="header">
                 <h1>BahasaLoka</h1>
-            </header> <br><br>
+            </header> <br>
 
 
         <div id="quiz-container">
             <!-- Area Latihan Drag and Drop -->
             <div class="question-container" id="question-1">
                 <p>Pilihlah pembentukan kata yang benar!</p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-1"></div> <br><br>
+                 <div class="drop-area" id="drop-area-1"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">menari</div>
                     <div class="option" draggable="true">mensurvei</div>
@@ -40,9 +40,9 @@
 
             <div class="question-container" id="question-2" style="display: none;">
                 <p>Pilihlah pembentukan kata yang benar! </p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-2"></div> <br><br>
+                 <div class="drop-area" id="drop-area-2"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">peterjemah</div>
                     <div class="option" draggable="true">penambang</div>
@@ -53,9 +53,9 @@
 
             <div class="question-container" id="question-3" style="display: none;">
                 <p>Pilihlah pembentukan kata yang kurang tepat!</p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-3"></div> <br><br>
+                 <div class="drop-area" id="drop-area-3"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">terpercayakan</div>
                     <div class="option" draggable="true">memotongkan</div>
@@ -66,9 +66,9 @@
 
             <div class="question-container" id="question-4" style="display: none;">
                 <p>Pilihlah pembentukan kata yang benar! </p>
-                <br><br>
+                <br>
 
-                 <div class="drop-area" id="drop-area-4"></div> <br><br>
+                 <div class="drop-area" id="drop-area-4"></div> <br>
                  <div class="option-container">
                     <div class="option" draggable="true">mentaati</div>
                     <div class="option" draggable="true">mencontek</div>
@@ -83,6 +83,7 @@
             </div>
             <div id="result"></div>
             <button id="back-to-material" style="display: none;" onclick="goBackToMaterial()">Kembali ke Materi</button>
+        <br>
         </main>
         <footer class="footer">
             <p>18222054 - Natanael S S</p>
