--- a/html/latihan_TataKata.html
+++ b/html/latihan_TataKata.html
@@ -20,7 +20,7 @@
         <main class="main-content">
             <header class="header">
                 <h1>BahasaLoka</h1>
-            </header> <br>
+            </header> <br><br>
 
 
         <div id="quiz-container">
